<?xml version="1.0"?>
<package format="2">
  <name>traffic_sim</name>
  <version>0.0.0</version>
  <description>The traffic_sim package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>marine_msgs</depend>
  <depend>project11</depend>
  <export>
  </export>
</package>
